# render-sim

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
hpc/: c2_go.sh  c2_quickstart.sh  certify_all.sh  check_modules.sh  collect_results.py  setup_render_c2.sh
hpc/jobs/: certify_freebird.sbatch  certify_gromacs.sbatch  certify_lammps.sbatch  certify_openmm.sbatch  certify_pyscf.sbatch  smoke_test.sbatch
render/: __init__.py  llm.py  pipeline.py  types.py
render/app/: __init__.py  guard.py  main.py
render/app/routers/: __init__.py  ask.py  coverage.py  eval.py  runs.py
render/app/static/: app.js  index.html  styles.css
render/cli/: __init__.py  main.py
render/engines/abm/: __init__.py
render/engines/cfd/: __init__.py
render/engines/des/: __init__.py
render/engines/dft/: __init__.py
render/engines/em/: __init__.py
render/engines/epi/: __init__.py
render/engines/fem/: __init__.py
render/engines/freebird/: __init__.py
render/engines/gromacs/: __init__.py
render/engines/lammps/: __init__.py
render/engines/materials_utils/: __init__.py
render/engines/mcmc/: __init__.py
render/engines/md/: __init__.py
render/engines/nbody/: __init__.py
render/engines/ode/: __init__.py
render/engines/reference/: __init__.py  harmonic.py
render/engines/sbml/: __init__.py
render/engines/ssa/: __init__.py
render/eval/: runner.py
render/execute/: __init__.py
render/execute/local/: __init__.py
render/execute/slurm_aiida/: __init__.py  _runner.py
render/intent/: __init__.py  nlp.py
render/interpret/: __init__.py  grounding.py  interpreter.py  plot.py
render/registry/: __init__.py  bootstrap.py  protocol.py  registry.py
render/validate/: __init__.py  clarify.py  layers.py  regime.py  stack.py
tests/: test_bootstrap.py  test_dft_method_alias.py  test_eval_skip.py  test_execute.py  test_guard.py  test_intent.py  test_interpret.py  test_pipeline.py  test_registry.py  test_science_engines.py  test_types.py  test_validation.py  test_version.py
