[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "render-sim"
version = "0.1.0"
description = "Natural-language → simulation → interpretation co-pilot for researchers"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "instructor>=1.0",
    "anthropic>=0.30",
    "pint>=0.24",
    "scipy>=1.13",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "typer>=0.12",
    "click>=8.1",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
render = "render.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
materials = [
    "ase>=3.23",
    "pymatgen>=2024.6",
]
freebird = [
    "juliacall>=0.9",
]
hpc = [
    "aiida-core>=2.6",
]

[tool.hatch.build.targets.wheel]
packages = ["render"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
